[project]
name = "cross_device_folder_picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/baseplate-admin/django-hstore-widget"
Repository = "https://github.com/baseplate-admin/django-hstore-widget"
"Bug Tracker" = "https://github.com/baseplate-admin/django-hstore-widget/issues"

[tool.hatch.build]
include = ['src/cross_device_folder_picker/**/*']
packages = ["src/cross_device_folder_picker"]
directory = 'dist'

[dependency-groups]
dev = ["hatch>=1.14.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
